# advent-of-code-25

./: README.md  pyproject.toml
solutions/: conftest.py  types.py  union_find.py  utils.py
solutions/day_01/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_02/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_03/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_04/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_05/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_06/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_07/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_08/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_09/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_10/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_11/: part_1.py  part_2.py  test_part_1.py  test_part_2.py
solutions/day_12/: part_1.py  test_part_1.py
template/: copier.yml
template/day_{{ day }}/: part_1.py  test_part_1.py  test_part_2.py
